@startuml View Profile and Details
skinparam classAttributeIconSize 0

class IdentityController {
    +GetUserInfo(): Task<IActionResult>
}

class PublicController {
    +GetTourDetail(id: Guid): Task<IActionResult>
}

class IdentityService {
    +GetUserInfo(): Task<ErrorOr<UserInfoVm>>
}

class UserEntity {
    +Id: Guid
    +Username: string
    +Email: string
    +AvatarUrl: string?
}

class TourEntity {
    +Id: Guid
    +TourName: string
    +Description: string
}

IdentityController ..> IdentityService : calls
IdentityService ..> UserEntity : retrieves
PublicController ..> TourEntity : retrieves
@enduml
